tests/rosetta/out/Fortran/brazilian-numbers.error
gfortran: exit status 1
/tmp/brazilian-numbers.f90:12:3:

   12 |   main()
      |   1
Error: Unclassifiable statement at (1)
/tmp/brazilian-numbers.f90:93:22:

   93 |             print *, '
      |                      1
Error: Unterminated character constant beginning at (1)
/tmp/brazilian-numbers.f90:94:1:

   94 | '
      | 1
Error: Invalid character in name at (1)
/tmp/brazilian-numbers.f90:86:7:

   86 |       n = 7
      |       1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
/tmp/brazilian-numbers.f90:39:5:

   39 |     b = 2
      |     1
Error: Symbol ‘b’ at (1) has no IMPLICIT type
/tmp/brazilian-numbers.f90:81:18:

   81 |     kinds = (/' ',' odd ',' prime '/)
      |                  1
Error: Different CHARACTER lengths (1/5) in array constructor at (1)
/tmp/brazilian-numbers.f90:84:20:

   84 |       print *, trim('First 20' // kind) // 'Brazilian numbers:'
      |                    1
Error: Operands of string concatenation operator at (1) are CHARACTER(8)/INTEGER(4)
/tmp/brazilian-numbers.f90:98:13:

   98 |         if ((kind == ' ')) then
      |             1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(1)
/tmp/brazilian-numbers.f90:100:18:

  100 |         else if ((kind == ' odd ')) then
      |                  1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(5)
/tmp/brazilian-numbers.f90:35:31:

   35 |     if ((((mod(n,2) == 0) .and. n) >= 8)) then
      |                               1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/brazilian-numbers.f90:18:4:

   18 |     n = int(((n / b)))
      |    1
Error: Dummy argument ‘n’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/brazilian-numbers.f90:24:6:

   24 |       n = int(((n / b)))
      |      1
Error: Dummy argument ‘n’ with INTENT(IN) in variable definition context (assignment) at (1)
