tests/rosetta/out/Fortran/brazilian-numbers.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program brazilian_numbers
  implicit none
    integer :: f
    integer :: d
    integer, dimension(3) :: kinds
    integer :: kind
    integer :: i0
      integer :: c
          character(len=100) :: s1
    character(len=100) :: s2
  main()
  contains
  recursive logical function sameDigits(n,b) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: b
    f = mod(n,b)
    n = int(((n / b)))
    do while ((n > 0))
      if ((mod(n,b) /= f)) then
        res = .false.
        return
      end if
      n = int(((n / b)))
    end do
    res = .true.
    return
  end function sameDigits
  recursive logical function isBrazilian(n) result(res)
    integer, intent(in) :: n
    if ((n < 7)) then
      res = .false.
      return
    end if
    if ((((mod(n,2) == 0) .and. n) >= 8)) then
      res = .true.
      return
    end if
    b = 2
    do while (((b < n) - 1))
      if (sameDigits(n,b)) then
        res = .true.
        return
      end if
      b = (b + 1)
    end do
    res = .false.
    return
  end function isBrazilian
  recursive logical function isPrime(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = .false.
      return
    end if
    if ((mod(n,2) == 0)) then
      res = (n == 2)
      return
    end if
    if ((mod(n,3) == 0)) then
      res = (n == 3)
      return
    end if
    d = 5
    do while (((d * d) <= n))
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 2)
      if ((mod(n,d) == 0)) then
        res = .false.
        return
      end if
      d = (d + 4)
    end do
    res = .true.
    return
  end function isPrime
  recursive integer function main() result(res)
    kinds = (/' ',' odd ',' prime '/)
    do i0 = 1, size(kinds)
      kind = kinds(i0)
      print *, trim('First 20' // kind) // 'Brazilian numbers:'
      c = 0
      n = 7
      do while (.true.)
        if (isBrazilian(n)) then
          write(s1,'(G0)') n
          print *, s1 // ' '
          c = (c + 1)
          if ((c == 20)) then
            print *, '
'
            exit
          end if
        end if
        if ((kind == ' ')) then
          n = (n + 1)
        else if ((kind == ' odd ')) then
          n = (n + 2)
        else
          do while (.true.)
            n = (n + 2)
            if (isPrime(n)) then
              exit
            end if
          end do
        end if
      end do
    end do
    n = 7
    c = 0
    do while ((c < 100000))
      if (isBrazilian(n)) then
        c = (c + 1)
      end if
      n = (n + 1)
    end do
    write(s2,'(G0)') (n - 1)
    print *, 'The 100,000th Brazilian number: ' // s2
  end function main
end program brazilian_numbers
